get tasks from django backend

--- a/board/board.html
+++ b/board/board.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../style.css">
 
     <script src="../remoteStorage/remoteStorage.js"></script>
+    <script src="../backend/backend.js"></script>
     <script src="../board/board.js"></script>
     <script src="../board/board-template.js"></script>
     <script src="../addtask/addtask.js"></script>
