--- a/addtask/addtask.html
+++ b/addtask/addtask.html
@@ -15,6 +15,7 @@
     <script src="../contacts/contacts.js"></script>
     <script src="../addtask/addtask.js"></script>
     <script src="../remoteStorage/remoteStorage.js"></script>
+    <script src="../backend/backend.js"></script>
 
     <title>Add Task</title>
 </head>
