render contacts from django

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -15,6 +15,7 @@
     <script src="../addtask/addtask.js"></script>
     <script src="../board/board.js"></script>
     <script src="../remoteStorage/remoteStorage.js"></script>
+    <script src="../backend/backend.js"></script>
     <script src="../contacts/contacts.js"></script>
 </head>
 <body id="body" onload="includeHTML(), loadContactList()">
