Auth / delete contacts

--- a/addtask/addtask.html
+++ b/addtask/addtask.html
@@ -20,7 +20,7 @@
     <title>Add Task</title>
 </head>
 
-<body onload="includeHTML(), loadArray()" id="addTask">
+<body onload="includeHTML(), loadArray(); checkAuth()" id="addTask">
     <div w3-include-html="../templates/desktop_template.html"></div>
 
     
