login and register

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="flex-column gap-small">
                 <div class="flex gap mobile-column">
-                    <button id="registerBtn" class="log-btn">Sign up</button>
+                    <button type="button" id="registerBtn" class="log-btn">Sign up</button>
                 </div>
             </div>
         </form>
